service.yml
#This is the loadbalancer that gives properties to all copies of web app
apiVersion: v1
kind: Service
metadata:
  name: flasktestapp
  labels:
    name: flasktestapp
spec:
  selector:
    app: flasktestapp
  ports:
  - port : 5001
    protocol: TCP
    targetPort: 5001
  selector:
    name: flasktestapp
    app: flasktestapp
  type: NodePort
